--- a/css/search.css
+++ b/css/search.css
@@ -1,4 +1,13 @@
-#search input{
-  font-family : inherit;
-  font-size   : 100%;
+#search input[type=text] {
+	font-family: 'Oswald', sans-serif;
+	font-size: 20;
+	width: 500px;
+	height: 40px;
+}
+
+#search input[type=submit] {
+	font-family: 'Oswald', sans-serif;
+	font-size: 15;
+	width: 70px;
+	height: 40px;
 }
