--- a/css/index.css
+++ b/css/index.css
@@ -38,7 +38,7 @@ body{
 
 .img-responsive{
 	width: 100%;
-	height: auto;
+	max-height: 300px;
 }
 
 .row{
@@ -72,9 +72,11 @@ body{
 	border-bottom: 1px solid #d8d8d8;
 }
 
+.row .box {
+	margin-left: 10px;
+}
 
-.row .box{margin-left: 15px;}
-.row div:first-child > .box{margin-left: 0}
+.row div:first-child > .box{margin-left: 0;}
 
 [class*='col-'] {float:left; min-height:1px;}
 
@@ -91,11 +93,23 @@ body{
 .col-2 {width: 16.66666667%;}
 .col-1 {width: 8.33333333%;}
 
-#title{font-size: 60px; text-align: center; padding-top: 15%;}
+#title{
+	font-size: 60px;
+	text-align: center;
+	padding-top: 15%;
+}
 
-#subtitle{font-size: 30px; text-align: center; padding-top: 2%;}
+#subtitle{
+	font-size: 30px;
+	text-align: center;
+	padding-top: 2%;
+}
 
-#search{text-align: center; padding-top: 2%; padding-bottom: 2%;}
+#search{
+	text-align: center;
+	padding-top: 2%;
+	padding-bottom: 2%;
+}
 
 #search input[type="text"] {
 	border: 1px solid #d1d1d1;
@@ -138,4 +152,18 @@ nav ul li a:hover{
 	box-shadow: 10px 10px 15px #ddd;
 	color: #eee;
 	transition:background 0.4s;
+}
+
+@media (max-width: 800px) {
+	.img-responsive{
+		width: 100%;
+		max-height: 100px;
+	}
+}
+
+@media (max-width: 400px) {
+	.img-responsive{
+		width: 100%;
+		max-height: 50px;
+	}
 }
