--- a/css/index.css
+++ b/css/index.css
@@ -27,14 +27,28 @@ body{
 	height: 100%
 }
 
-.container{
-	height: 97%;
+.container {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -4em;
 }
 
-.footer {
+.footer, .push {
+	text-align: center;ss
+	width: 100%;
+	height: 5em;
+}
+
+/*.container{
+	height: 97%;
+}*/
+
+/*.footer {
+	width: 100%;
 	height: 3%;
 	text-align: center;
-}
+}*/
 
 .img-responsive{
 	width: 100%;
