--- a/css/index.css
+++ b/css/index.css
@@ -40,19 +40,8 @@ body{
 	height: 5em;
 }
 
-/*.container{
-	height: 97%;
-}*/
-
-/*.footer {
-	width: 100%;
-	height: 3%;
-	text-align: center;
-}*/
-
 .img-responsive{
 	width: 100%;
-	max-height: 300px;
 }
 
 .row{
@@ -84,6 +73,10 @@ body{
 	background: none;
 	border: 0;
 	border-bottom: 1px solid #d8d8d8;
+}
+
+.query {
+	text-align: center;
 }
 
 .row .box {
@@ -168,16 +161,51 @@ nav ul li a:hover{
 	transition:background 0.4s;
 }
 
-@media (max-width: 800px) {
+@media (min-width: 300px) {
 	.img-responsive{
 		width: 100%;
-		max-height: 100px;
+		max-height: 60px;
 	}
 }
 
-@media (max-width: 400px) {
+@media (min-width: 360px) {
 	.img-responsive{
 		width: 100%;
-		max-height: 50px;
+		max-height: 80px;
+	}
+}
+
+@media (min-width: 800px) {
+	.img-responsive{
+		width: 100%;
+		max-height: 170px;
+	}
+}
+
+@media (min-width: 900px) {
+	.img-responsive{
+		width: 100%;
+		max-height: 200px;
+	}
+}
+
+@media (min-width: 1125px) {
+	.img-responsive{
+		width: 100%;
+		max-height: 210px;
+	}
+}
+
+@media (min-width: 1360px) {
+	.img-responsive{
+		width: 100%;
+		max-height: 250px;
+	}
+}
+
+@media (min-width: 1400px) {
+	.img-responsive{
+		width: 100%;
+		max-height: 300px;
 	}
 }
