--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,11 @@
 /* ---RESET CSS */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
+	blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn,
+	em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u,
+	i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
+	caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas,
+	details, embed, figure, figcaption, footer, header, hgroup, menu, nav,
+	output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -19,9 +13,9 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* RESET CSS--- */
 
-body{
+/* RESET CSS--- */
+body {
 	font-family: 'Oswald', sans-serif;
 	background: #eee;
 	height: 100%
@@ -35,44 +29,79 @@ body{
 }
 
 .footer, .push {
-	text-align: center;ss
-	width: 100%;
+	text-align: center;
+	ss width: 100%;
 	height: 5em;
 }
 
-.img-responsive{
+.img-responsive {
 	width: 100%;
 }
 
-.row{
+.row {
 	display: table;
 	clear: both;
 	width: 100%;
 }
 
-.register{
+.application-form {
 	padding-top: 10%;
-	text-align: center;
-}
-
-.register-input {
-	padding-top: 2%;
-	text-align: center;
 	background: none;
-	border: 0;
-	border-bottom: 1px solid #d8d8d8;
-}
-
-.login {
-	padding-top: 10%;
 	text-align: center;
 }
 
-.login-input {
+.application-form input[type="email"] {
+	border: 1px solid #d1d1d1;
+	border-radius: 20px;
+	padding: 6px 15px 6px 25px;
+}
+
+.application-form input[type="password"] {
+	border: 1px solid #d1d1d1;
+	border-radius: 20px;
+	padding: 6px 15px 6px 25px;
+}
+
+.application-form input[type="submit"] {
+	border: 1px solid #d1d1d1;
+	border-radius: 20px;
+	padding: 6px 5px 6px 5px;
+}
+
+.profile {
+	width: 40%;
+	margin: auto;
 	text-align: center;
-	background: none;
-	border: 0;
-	border-bottom: 1px solid #d8d8d8;
+	background-color: #E2ECEE;
+}
+
+.profile .user-profile {
+	border: 1px solid #CED5D7;
+	border-radius: 6px;
+	padding: 45px 45px 20px;
+	margin-top: 50px;
+	background-color: white;
+}
+
+.profile .user-profile label {
+	display: block;
+	font-weight: bold;
+}
+
+.profile .user-profile div {
+	margin-bottom: 15px;
+}
+
+.user-profile input[type="text"] {
+	border: 1px solid #d1d1d1;
+	border-radius: 20px;
+	padding: 6px 15px 6px 25px;
+}
+
+.user-profile input[type="submit"] {
+	border: 1px solid #d1d1d1;
+	border-radius: 20px;
+	padding: 6px 5px 6px 5px;
 }
 
 .query {
@@ -83,36 +112,76 @@ body{
 	margin-left: 10px;
 }
 
-.row div:first-child > .box{margin-left: 0;}
+.row div:first-child>.box {
+	margin-left: 0;
+}
 
-[class*='col-'] {float:left; min-height:1px;}
+[class*='col-'] {
+	float: left;
+	min-height: 1px;
+}
 
-.col-12 {width: 100%;}
-.col-11 {width: 91.66666667%;}
-.col-10 {width: 83.33333333%;}
-.col-9 {width: 75%;}
-.col-8 {width: 66.66666667%;}
-.col-7 {width: 58.33333333%;}
-.col-6 {width: 50%;}
-.col-5 {width: 41.66666667%;}
-.col-4 {width: 33.33333333%;}
-.col-3 {width: 25%;}
-.col-2 {width: 16.66666667%;}
-.col-1 {width: 8.33333333%;}
+.col-12 {
+	width: 100%;
+}
 
-#title{
+.col-11 {
+	width: 91.66666667%;
+}
+
+.col-10 {
+	width: 83.33333333%;
+}
+
+.col-9 {
+	width: 75%;
+}
+
+.col-8 {
+	width: 66.66666667%;
+}
+
+.col-7 {
+	width: 58.33333333%;
+}
+
+.col-6 {
+	width: 50%;
+}
+
+.col-5 {
+	width: 41.66666667%;
+}
+
+.col-4 {
+	width: 33.33333333%;
+}
+
+.col-3 {
+	width: 25%;
+}
+
+.col-2 {
+	width: 16.66666667%;
+}
+
+.col-1 {
+	width: 8.33333333%;
+}
+
+#title {
 	font-size: 60px;
 	text-align: center;
 	padding-top: 15%;
 }
 
-#subtitle{
+#subtitle {
 	font-size: 30px;
 	text-align: center;
 	padding-top: 2%;
 }
 
-#search{
+#search {
 	text-align: center;
 	padding-top: 2%;
 	padding-bottom: 2%;
@@ -121,29 +190,30 @@ body{
 #search input[type="text"] {
 	border: 1px solid #d1d1d1;
 	border-radius: 20px;
-	padding: 6px 15px 6px 25px;	
+	padding: 6px 15px 6px 25px;
 }
 
 #search input[type="submit"] {
 	border: 1px solid #d1d1d1;
 	border-radius: 20px;
-	padding: 6px 5px 6px 5px;	
+	padding: 6px 5px 6px 5px;
 }
 
-nav{
+nav {
 	position: fixed;
-	width:100%;
+	width: 100%;
 }
 
-nav ul{
+nav ul {
 	display: table;
-	width:100%;
+	width: 100%;
 }
-nav ul li{
+
+nav ul li {
 	display: table-cell;
 }
 
-nav ul li a{
+nav ul li a {
 	display: block;
 	padding: 15px;
 	background: #ddd;
@@ -153,58 +223,58 @@ nav ul li a{
 	border-bottom: 2px solid #ccc;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
 	background: #999;
 	border-bottom: 2px solid #222;
 	box-shadow: 10px 10px 15px #ddd;
 	color: #eee;
-	transition:background 0.4s;
+	transition: background 0.4s;
 }
 
-@media (min-width: 300px) {
-	.img-responsive{
+@media ( min-width : 300px) {
+	.img-responsive {
 		width: 100%;
 		max-height: 60px;
 	}
 }
 
-@media (min-width: 360px) {
-	.img-responsive{
+@media ( min-width : 360px) {
+	.img-responsive {
 		width: 100%;
 		max-height: 80px;
 	}
 }
 
-@media (min-width: 800px) {
-	.img-responsive{
+@media ( min-width : 800px) {
+	.img-responsive {
 		width: 100%;
 		max-height: 170px;
 	}
 }
 
-@media (min-width: 900px) {
-	.img-responsive{
+@media ( min-width : 900px) {
+	.img-responsive {
 		width: 100%;
 		max-height: 200px;
 	}
 }
 
-@media (min-width: 1125px) {
-	.img-responsive{
+@media ( min-width : 1125px) {
+	.img-responsive {
 		width: 100%;
 		max-height: 210px;
 	}
 }
 
-@media (min-width: 1360px) {
-	.img-responsive{
+@media ( min-width : 1360px) {
+	.img-responsive {
 		width: 100%;
 		max-height: 250px;
 	}
 }
 
-@media (min-width: 1400px) {
-	.img-responsive{
+@media ( min-width : 1400px) {
+	.img-responsive {
 		width: 100%;
 		max-height: 300px;
 	}
