--- a/css/index.css
+++ b/css/index.css
@@ -1,281 +1,302 @@
 /* ---RESET CSS */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
-	blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn,
-	em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u,
-	i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
-	caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas,
-	details, embed, figure, figcaption, footer, header, hgroup, menu, nav,
-	output, ruby, section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn,
+em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u,
+i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
+caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas,
+details, embed, figure, figcaption, footer, header, hgroup, menu, nav,
+output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 
 /* RESET CSS--- */
 body {
-	font-family: 'Oswald', sans-serif;
-	background: #eee;
-	height: 100%
+    font-family: 'Oswald', sans-serif;
+    background: #eee;
+    height: 100%
 }
 
 .container {
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	margin: 0 auto -4em;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -4em;
 }
 
 .footer, .push {
-	text-align: center;
-	ss width: 100%;
-	height: 5em;
+    text-align: center;
+    width: 100%;
+    height: 5em;
 }
 
 .img-responsive {
-	width: 100%;
+    width: 100%;
 }
 
 .row {
-	display: table;
-	clear: both;
-	width: 100%;
+    display: table;
+    clear: both;
+    width: 100%;
 }
 
 .application-form {
-	padding-top: 10%;
-	background: none;
-	text-align: center;
+    padding-top: 10%;
+    background: none;
+    text-align: center;
 }
 
 .application-form input[type="email"] {
-	border: 1px solid #d1d1d1;
-	border-radius: 20px;
-	padding: 6px 15px 6px 25px;
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 15px 6px 25px;
 }
 
 .application-form input[type="password"] {
-	border: 1px solid #d1d1d1;
-	border-radius: 20px;
-	padding: 6px 15px 6px 25px;
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 15px 6px 25px;
 }
 
 .application-form input[type="submit"] {
-	border: 1px solid #d1d1d1;
-	border-radius: 20px;
-	padding: 6px 5px 6px 5px;
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 5px 6px 5px;
 }
 
 .profile {
-	width: 40%;
-	margin: auto;
-	text-align: center;
-	background-color: #E2ECEE;
+    width: 40%;
+    margin: auto;
+    text-align: center;
+    background-color: #E2ECEE;
 }
 
-.profile .user-profile {
-	border: 1px solid #CED5D7;
-	border-radius: 6px;
-	padding: 45px 45px 20px;
-	margin-top: 50px;
-	background-color: white;
+.profile .user_profile {
+    border: 1px solid #CED5D7;
+    border-radius: 6px;
+    padding: 45px 45px 20px;
+    margin-top: 50px;
+    background-color: white;
 }
 
-.profile .user-profile label {
-	display: block;
-	font-weight: bold;
+.profile .user_profile label {
+    display: block;
+    font-weight: bold;
 }
 
-.profile .user-profile div {
-	margin-bottom: 15px;
+.profile .user_profile div {
+    margin-bottom: 15px;
 }
 
-.user-profile input[type="text"] {
-	border: 1px solid #d1d1d1;
-	border-radius: 20px;
-	padding: 6px 15px 6px 25px;
+.user_profile input[type="text"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 15px 6px 25px;
 }
 
-.user-profile input[type="submit"] {
-	border: 1px solid #d1d1d1;
-	border-radius: 20px;
-	padding: 6px 5px 6px 5px;
+.user_profile input[type="submit"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 5px 6px 5px;
 }
 
 .query {
-	text-align: center;
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
+.query td, th{
+    border: 1px solid #CCC;
+}
+
+.query th{
+    background: #c7c7c7;
+    font-weight: bold;
+}
+
+.query td{
+    background: #ececec;
+    text-align: center;
+}
+
+
+
 .row .box {
-	margin-left: 10px;
+    margin-left: 10px;
 }
 
 .row div:first-child>.box {
-	margin-left: 0;
+    margin-left: 0;
 }
 
 [class*='col-'] {
-	float: left;
-	min-height: 1px;
+    float: left;
+    min-height: 1px;
 }
 
 .col-12 {
-	width: 100%;
+    width: 100%;
 }
 
 .col-11 {
-	width: 91.66666667%;
+    width: 91.66666667%;
 }
 
 .col-10 {
-	width: 83.33333333%;
+    width: 83.33333333%;
 }
 
 .col-9 {
-	width: 75%;
+    width: 75%;
 }
 
 .col-8 {
-	width: 66.66666667%;
+    width: 66.66666667%;
 }
 
 .col-7 {
-	width: 58.33333333%;
+    width: 58.33333333%;
 }
 
 .col-6 {
-	width: 50%;
+    width: 50%;
 }
 
 .col-5 {
-	width: 41.66666667%;
+    width: 41.66666667%;
 }
 
 .col-4 {
-	width: 33.33333333%;
+    width: 33.33333333%;
 }
 
 .col-3 {
-	width: 25%;
+    width: 25%;
 }
 
 .col-2 {
-	width: 16.66666667%;
+    width: 16.66666667%;
 }
 
 .col-1 {
-	width: 8.33333333%;
+    width: 8.33333333%;
 }
 
 #title {
-	font-size: 60px;
-	text-align: center;
-	padding-top: 15%;
+    font-size: 60px;
+    text-align: center;
+    padding-top: 5%;
 }
 
 #subtitle {
-	font-size: 30px;
-	text-align: center;
-	padding-top: 2%;
+    font-size: 30px;
+    text-align: center;
+    padding-top: 2%;
 }
 
 #search {
-	text-align: center;
-	padding-top: 2%;
-	padding-bottom: 2%;
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 #search input[type="text"] {
-	border: 1px solid #d1d1d1;
-	border-radius: 20px;
-	padding: 6px 15px 6px 25px;
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 15px 6px 25px;
 }
 
 #search input[type="submit"] {
-	border: 1px solid #d1d1d1;
-	border-radius: 20px;
-	padding: 6px 5px 6px 5px;
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 5px 6px 5px;
 }
 
 nav {
-	position: fixed;
-	width: 100%;
+    position: fixed;
+    width: 100%;
 }
 
 nav ul {
-	display: table;
-	width: 100%;
+    display: table;
+    width: 100%;
 }
 
 nav ul li {
-	display: table-cell;
+    display: table-cell;
 }
 
 nav ul li a {
-	display: block;
-	padding: 15px;
-	background: #ddd;
-	color: #222;
-	text-decoration: none;
-	text-align: center;
-	border-bottom: 2px solid #ccc;
+    display: block;
+    padding: 15px;
+    background: #ddd;
+    color: #222;
+    text-decoration: none;
+    text-align: center;
+    border-bottom: 2px solid #ccc;
 }
 
 nav ul li a:hover {
-	background: #999;
-	border-bottom: 2px solid #222;
-	box-shadow: 10px 10px 15px #ddd;
-	color: #eee;
-	transition: background 0.4s;
+    background: #999;
+    border-bottom: 2px solid #222;
+    box-shadow: 10px 10px 15px #ddd;
+    color: #eee;
+    transition: background 0.4s;
 }
 
 @media ( min-width : 300px) {
-	.img-responsive {
-		width: 100%;
-		max-height: 60px;
-	}
+    .img-responsive {
+        width: 100%;
+        max-height: 60px;
+    }
 }
 
 @media ( min-width : 360px) {
-	.img-responsive {
-		width: 100%;
-		max-height: 80px;
-	}
+    .img-responsive {
+        width: 100%;
+        max-height: 80px;
+    }
 }
 
 @media ( min-width : 800px) {
-	.img-responsive {
-		width: 100%;
-		max-height: 170px;
-	}
+    .img-responsive {
+        width: 100%;
+        max-height: 170px;
+    }
 }
 
 @media ( min-width : 900px) {
-	.img-responsive {
-		width: 100%;
-		max-height: 200px;
-	}
+    .img-responsive {
+        width: 100%;
+        max-height: 200px;
+    }
 }
 
 @media ( min-width : 1125px) {
-	.img-responsive {
-		width: 100%;
-		max-height: 210px;
-	}
+    .img-responsive {
+        width: 100%;
+        max-height: 210px;
+    }
 }
 
 @media ( min-width : 1360px) {
-	.img-responsive {
-		width: 100%;
-		max-height: 250px;
-	}
+    .img-responsive {
+        width: 100%;
+        max-height: 250px;
+    }
 }
 
 @media ( min-width : 1400px) {
-	.img-responsive {
-		width: 100%;
-		max-height: 300px;
-	}
+    .img-responsive {
+        width: 100%;
+        max-height: 300px;
+    }
 }
