--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ output, ruby, section, summary, time, mark, audio, video {
     vertical-align: baseline;
 }
 
-/* RESET CSS--- */
+/*------ IN COMMON ------*/
 body {
     font-family: 'Oswald', sans-serif;
     background: #eee;
@@ -28,6 +28,12 @@ body {
     margin: 0 auto;
 }
 
+.row {
+    display: table;
+    clear: both;
+    width: 100%;
+}
+
 .footer, .push {
     text-align: center;
     width: 100%;
@@ -38,111 +44,11 @@ body {
     width: 100%;
 }
 
-.row {
-    display: table;
-    clear: both;
-    width: 100%;
-}
-
-.application-form {
-    padding-top: 10%;
-    background: none;
-    text-align: center;
-}
-
-.application-form .radio_buttons, .inputs, .button{
-    padding-top: 1%;
-}
-
-.application-form input[type="email"] {
-    border: 1px solid #d1d1d1;
-    border-radius: 20px;
-    padding: 6px 15px 6px 25px;
-}
-
-.application-form input[type="password"] {
-    border: 1px solid #d1d1d1;
-    border-radius: 20px;
-    padding: 6px 15px 6px 25px;
-}
-
-.application-form input[type="submit"] {
-    border: 1px solid #d1d1d1;
-    border-radius: 20px;
-    padding: 6px 5px 6px 5px;
-}
-
-.profile {
-    width: 40%;
-    padding-top: 2%;    
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-
-.user_profile {
-    border: 1px solid #CED5D7;
-    border-radius: 10px;
-    padding: 45px 45px 20px;
-    background-color: white;
-}
-
-.user_profile p {
-    display: inline-block;
-    font-weight: bold;
-}
-
-.user_profile div {
-    padding-bottom: 15px;
-}
-
-.user_profile label {
-    display: block;
-    font-weight: bold;
-}
-
-.user_profile input[type="text"] {
-    border: 1px solid #d1d1d1;
-    border-radius: 20px;
-    padding: 6px 15px 6px 25px;
-}
-
-.user_profile input[type="submit"] {
-    border: 1px solid #d1d1d1;
-    border-radius: 20px;
-    padding: 6px 5px 6px 5px;
-}
-
-.query {
-    margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-.query td, th{
-    border: 1px solid #CCC;
-}
-
-.query th{
-    background: #c7c7c7;
-    font-weight: bold;
-}
-
-.query td{
-    background: #ececec;
-    text-align: center;
-}
-
-
-
 .row .box {
     margin-left: 10px;
 }
 
-.row div:first-child>.box {
+.row div:first-child > .box {
     margin-left: 0;
 }
 
@@ -199,34 +105,16 @@ body {
     width: 8.33333333%;
 }
 
-#title {
+.title {
     font-size: 60px;
     text-align: center;
     padding-top: 12%;
 }
 
-#subtitle {
+.subtitle {
     font-size: 30px;
     text-align: center;
     padding-top: 2%;
-}
-
-#search {
-    text-align: center;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-
-#search input[type="text"] {
-    border: 1px solid #d1d1d1;
-    border-radius: 20px;
-    padding: 6px 15px 6px 25px;
-}
-
-#search input[type="submit"] {
-    border: 1px solid #d1d1d1;
-    border-radius: 20px;
-    padding: 6px 5px 6px 5px;
 }
 
 nav {
@@ -261,51 +149,151 @@ nav ul li a:hover {
     transition: background 0.4s;
 }
 
-@media ( min-width : 300px) {
+@media ( min-width: 300px) {
     .img-responsive {
         width: 100%;
         max-height: 60px;
     }
 }
 
-@media ( min-width : 360px) {
+@media ( min-width: 360px) {
     .img-responsive {
         width: 100%;
         max-height: 80px;
     }
 }
 
-@media ( min-width : 800px) {
+@media ( min-width: 800px) {
     .img-responsive {
         width: 100%;
         max-height: 170px;
     }
 }
 
-@media ( min-width : 900px) {
+@media ( min-width: 900px) {
     .img-responsive {
         width: 100%;
         max-height: 200px;
     }
 }
 
-@media ( min-width : 1125px) {
+@media ( min-width: 1125px) {
     .img-responsive {
         width: 100%;
         max-height: 210px;
     }
 }
 
-@media ( min-width : 1360px) {
+@media ( min-width: 1360px) {
     .img-responsive {
         width: 100%;
         max-height: 250px;
     }
 }
 
-@media ( min-width : 1400px) {
+@media ( min-width: 1400px) {
     .img-responsive {
         width: 100%;
         max-height: 300px;
     }
+}
+
+/*------ Register.php, Login.php ------*/
+.application-form {
+    padding-top: 10%;
+    background: none;
+    text-align: center;
+}
+
+.application-form .radio_buttons, .inputs, .button {
+    padding-top: 1%;
+}
+
+.application-form input[type="email"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 15px 6px 25px;
+}
+
+.application-form input[type="password"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 15px 6px 25px;
+}
+
+.application-form input[type="submit"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 5px 6px 5px;
+}
+
+/*------ Profile.php ------*/
+.profile {
+    width: 40%;
+    padding-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+.user_profile {
+    border: 1px solid #CED5D7;
+    border-radius: 10px;
+    padding: 45px 45px 20px;
+    background-color: white;
+}
+
+.user_profile p {
+    display: inline-block;
+    font-weight: bold;
+}
+
+.user_profile div {
+    padding-bottom: 15px;
+}
+
+.user_profile label {
+    display: block;
+    font-weight: bold;
+}
+
+.user_profile input[type="text"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 15px 6px 25px;
+}
+
+.user_profile input[type="submit"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 5px 6px 5px;
+}
+
+/*------ Index.php ------*/
+.search {
+    text-align: center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.search input[type="text"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 15px 6px 25px;
+}
+
+.search input[type="submit"] {
+    border: 1px solid #d1d1d1;
+    border-radius: 20px;
+    padding: 6px 5px 6px 5px;
+}
+
+/*------ Reservations.php ------*/
+.reservations-nav {
+    text-align: center;
+}
+
+.reservations-nav li {
+    font-size: 20px;
+    line-height: 2.43;
 }
