implementado transferencia XML get new reservations

--- a/css/index.css
+++ b/css/index.css
@@ -302,8 +302,8 @@ nav ul li a:hover {
     font-weight: bold;
 }
 
-#reservations_header_name {
-    font-size: 20px;
+#reservations_header_1 {
+    font-size: 25px;
 }
 
 .reservations-table-odd td {
