--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn,
 em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u,
 i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
 caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas,
-details, embed, figure, figcaption, footer, header, hgroup, menu, nav,
+details, embed, figure, figcaption, footer, header, menu, nav,
 output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -291,7 +291,6 @@ nav ul li a:hover {
 .reservations li {
     font-size: 15px;
     line-height: 2;
-
 }
 
 .reservations li:hover {
@@ -333,3 +332,7 @@ nav ul li a:hover {
 .reservations-table tbody > tr:last-child > td {
      border-bottom-width: 0;
  }
+
+#booking-desc {
+    font-size: 12px;
+}
